syntax = "proto3";

package Yql.Analytics.V1;
option java_package = "com.yandex.yql.analytics.v1";

import "kikimr/public/api/protos/draft/yql_analytics.proto";

service AnalyticsService {
    rpc ExecuteQuery(Analytics.ExecuteQueryRequest) returns (Analytics.ExecuteQueryResponse);

    rpc GetResultData(Analytics.GetResultDataRequest) returns (Analytics.GetResultDataResponse);

    rpc GetConnections(Analytics.GetConnectionsRequest) returns (Analytics.GetConnectionsResponse);

    rpc ModifyConnections(Analytics.ModifyConnectionsRequest) returns (Analytics.ModifyConnectionsResponse);

    rpc GetQueries(Analytics.GetQueriesRequest) returns (Analytics.GetQueriesResponse);

    rpc ModifyQuery(Analytics.ModifyQueryRequest) returns (Analytics.ModifyQueryResponse);

    rpc GetHistory(Analytics.GetHistoryRequest) returns (Analytics.GetHistoryResponse);

    rpc ModifyHistory(Analytics.ModifyHistoryRequest) returns (Analytics.ModifyHistoryResponse);
}
